--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@koa/router": "^12.0.0",
+        "dotenv": "^16.0.2",
         "koa": "^2.13.4",
         "koa-static": "^5.0.0",
         "nanoid": "^3.0.0",
