--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "dev": "nodemon --ignore node_modules/ --watch src -e ts,tsx --exec ts-node src/index.ts",
+        "dev": "NODE_ENV=development nodemon --ignore node_modules/ --watch src -e ts,tsx --exec ts-node src/index.ts",
         "build": "tsc",
         "start": "node dist/index.js"
     },
@@ -12,16 +12,19 @@
         "@koa/router": "^12.0.0",
         "dotenv": "^16.0.2",
         "koa": "^2.13.4",
+        "koa-logger": "^3.2.1",
         "koa-static": "^5.0.0",
         "nanoid": "^3.0.0",
         "uid": "^2.0.0"
     },
     "devDependencies": {
         "@types/koa": "^2.13.5",
+        "@types/koa-logger": "^3.1.2",
         "@types/koa-static": "^4.0.2",
         "@types/koa__router": "^12.0.0",
         "@types/nanoid": "^3.0.0",
         "@types/node": "^18.7.18",
+        "koa-logger": "^3.2.1",
         "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.3"
