--- a/.editorconfig
+++ b/.editorconfig
@@ -5,10 +5,14 @@ end_of_line = lf
 insert_final_newline = false
 trim_trailing_whitespace = true
 
-[*.{ts,vue}]
+[*.{ts,vue,css,scss}]
 indent_style = space
 indent_size = 4
 
 [{package.json}]
+indent_size = 2
+indent_style = space
+
+[*.html]
 indent_size = 2
 indent_style = space
