--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.3",
     "axios": "^0.27.2",
     "sass": "^1.55.0",
     "vue": "^3.2.37"
