--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@koa/router": "^12.0.0",
+        "@prisma/client": "4.3.1",
         "dotenv": "^16.0.2",
         "koa": "^2.13.4",
         "koa-logger": "^3.2.1",
@@ -26,6 +27,7 @@
         "@types/node": "^18.7.18",
         "koa-logger": "^3.2.1",
         "nodemon": "^2.0.20",
+        "prisma": "^4.3.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.3"
     }
