--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,10 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "dev": "NODE_ENV=development nodemon --ignore node_modules/ --watch src -e ts,tsx --exec ts-node src/index.ts",
-        "build": "tsc",
-        "start": "node dist/index.js"
+        "dev": "NODE_ENV=dev nodemon --ignore node_modules/ --watch src -e ts,tsx --exec ts-node src/index.ts",
+        "build": "yarn clean && tsc",
+        "start": "NODE_ENV=prod node dist/index.js",
+        "clean": "rm -rf dist/"
     },
     "dependencies": {
         "@koa/router": "^12.0.0",
