--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
         "clean": "rm -rf dist/"
     },
     "dependencies": {
+        "@koa/cors": "^3.4.1",
         "@koa/router": "^12.0.0",
         "@prisma/client": "4.3.1",
         "dotenv": "^16.0.2",
         "koa": "^2.13.4",
+        "koa-bodyparser": "^4.3.0",
         "koa-logger": "^3.2.1",
         "koa-static": "^5.0.0",
         "nanoid": "^3.0.0",
@@ -21,8 +23,10 @@
     },
     "devDependencies": {
         "@types/koa": "^2.13.5",
+        "@types/koa-bodyparser": "^4.3.8",
         "@types/koa-logger": "^3.1.2",
         "@types/koa-static": "^4.0.2",
+        "@types/koa__cors": "^3.3.0",
         "@types/koa__router": "^12.0.0",
         "@types/nanoid": "^3.0.0",
         "@types/node": "^18.7.18",
